--- a/src/FrontEnd/AttributeChoice.fxml
+++ b/src/FrontEnd/AttributeChoice.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,12 +12,11 @@
       <AnchorPane layoutX="27.0" layoutY="28.0" prefHeight="370.0" prefWidth="275.0" />
       <AnchorPane fx:id="bodyPane" layoutX="37.0" layoutY="38.0" prefHeight="370.0" prefWidth="275.0" />
       <Button fx:id="lookup" layoutX="660.0" layoutY="459.0" mnemonicParsing="false" text="Search" />
-      <Slider fx:id="lengthSlider" layoutX="135.0" layoutY="436.0" value="20.0" />
-      <Text layoutX="27.0" layoutY="449.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Length:" wrappingWidth="62.00001239776611" />
-      <Slider fx:id="tempSlider" layoutX="135.0" layoutY="485.0" value="50.0" />
-      <Text layoutX="27.0" layoutY="498.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Temperature:" wrappingWidth="93.00001239776611" />
-      <Text layoutX="352.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Age:" wrappingWidth="53.52294921875" />
-      <TextField fx:id="ageField" layoutX="434.0" layoutY="100.0" />
+      <Slider fx:id="lengthSlider" disable="true" layoutX="135.0" layoutY="436.0" opacity="0.0" value="20.0" />
+      <Text disable="true" layoutX="27.0" layoutY="449.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Length:" wrappingWidth="62.00001239776611" />
+      <Slider fx:id="tempSlider" layoutX="135.0" layoutY="464.0" value="50.0" />
+      <Text layoutX="27.0" layoutY="477.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Temperature:" wrappingWidth="93.00001239776611" />
+      <Text layoutX="352.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usage:" wrappingWidth="53.52294921875" />
       <TextField fx:id="priceField" layoutX="434.0" layoutY="382.0" />
       <Text layoutX="352.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price:" wrappingWidth="53.52294921875" />
       <TextField fx:id="weightField" layoutX="434.0" layoutY="151.0" />
@@ -24,10 +24,11 @@
       <TextField fx:id="heightField" layoutX="434.0" layoutY="203.0" />
       <Text layoutX="352.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Height:" wrappingWidth="53.52294921875" />
       <AnchorPane fx:id="weatherPane" layoutX="370.0" layoutY="260.0" prefHeight="100.0" prefWidth="300.0" />
-      <Text fx:id="tempText" layoutX="288.0" layoutY="498.0" strokeType="OUTSIDE" strokeWidth="0.0" text="None" />
+      <Text fx:id="tempText" layoutX="285.0" layoutY="476.0" strokeType="OUTSIDE" strokeWidth="0.0" text="None" />
       <Text layoutX="623.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Kg)" />
       <Text layoutX="623.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(Cm)" />
       <Text layoutX="622.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(DA)" />
       <Button fx:id="reset" layoutX="574.0" layoutY="459.0" mnemonicParsing="false" text="Reset" />
+      <ChoiceBox fx:id="usage" layoutX="434.0" layoutY="99.0" prefHeight="26.0" prefWidth="171.0" />
    </children>
 </AnchorPane>
