--- a/src/FrontEnd/MainWindow.fxml
+++ b/src/FrontEnd/MainWindow.fxml
@@ -3,10 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="520.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FrontEnd.MainWindow">
    <children>
       <ListView fx:id="productList" layoutX="14.0" layoutY="11.0" prefHeight="497.0" prefWidth="580.0" />
-      <Button fx:id="showProduct" layoutX="644.0" layoutY="65.0" mnemonicParsing="false" text="Button" />
+      <Button fx:id="returnButton" layoutX="619.0" layoutY="23.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="148.0" text="Return" />
+      <Text layoutX="645.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sellers Results" />
+      <ListView fx:id="agentsList" layoutX="614.0" layoutY="106.0" prefHeight="253.0" prefWidth="158.0" />
    </children>
 </AnchorPane>
